--- a/public/screen/index.html
+++ b/public/screen/index.html
@@ -6,7 +6,12 @@
     <title>Tela interativa</title>
 </head>
 <body>
-    <div>tela</div>
+    <div class="container">
+        <div class="content">
+            <canvas id="screen"></canvas>
+            <div class="scanline"></div>
+        </div>
+    </div>
     
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
