--- a/public/screen/index.html
+++ b/public/screen/index.html
@@ -12,7 +12,13 @@
             <div class="scanline"></div>
         </div>
     </div>
-    
+
+    <div class="info">
+        <div id="qrcode"></div>
+        <div id="siteinfo"></div>
+    </div>
+
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
