btn_calibrar-Barra_cor

--- a/public/interactionScreen/index.html
+++ b/public/interactionScreen/index.html
@@ -16,12 +16,16 @@
         <div id="btnInteragir">
             <h1 class="wrapTxt">Interaja<span class="mask"></span></h1>
         </div>
+        <div id="btnCalibrar">
+            <h1 class="wrapTxt">Calibrar<span class="mask"></span></h1>
+        </div>
         <span id="aim"></span>
         <div id="output">
             <h2 class="wrapTxt">Confira o processo!<span class="mask"></span></h2>
             <canvas id="canvas"></canvas>
         </div>
     </div>
+    <div id="alert" style="background-color: #FF69B4; color: #FFFFFF;"></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
